# cs5350-group-assignment-2

./: .gitignore  CMakeLists.txt  README.md  assignment.cpp  experiment-01.slurm  experiment-02.slurm  experiment-03.slurm  experiment-04.slurm  experiment-05.slurm  experiment-06.slurm  main  main.cpp  matrix.cpp  matrix.hpp
results/experiment-01/: m1024_n1024_q1024_P16_seed0.txt  m1024_n1024_q1024_P16_seed1.txt  m1024_n1024_q1024_P16_seed2.txt  m1024_n1024_q1024_P16_seed3.txt  m1024_n1024_q1024_P16_seed4.txt  m2048_n2048_q2048_P16_seed0.txt  m2048_n2048_q2048_P16_seed1.txt  m2048_n2048_q2048_P16_seed2.txt  m2048_n2048_q2048_P16_seed3.txt  m2048_n2048_q2048_P16_seed4.txt  m4096_n4096_q4096_P16_seed0.txt  m4096_n4096_q4096_P16_seed1.txt  m4096_n4096_q4096_P16_seed2.txt  m4096_n4096_q4096_P16_seed3.txt  m4096_n4096_q4096_P16_seed4.txt  m512_n512_q512_P16_seed0.txt  m512_n512_q512_P16_seed1.txt  m512_n512_q512_P16_seed2.txt  m512_n512_q512_P16_seed3.txt  m512_n512_q512_P16_seed4.txt  m8192_n8192_q8192_P16_seed0.txt  m8192_n8192_q8192_P16_seed1.txt  m8192_n8192_q8192_P16_seed2.txt  m8192_n8192_q8192_P16_seed3.txt  m8192_n8192_q8192_P16_seed4.txt
results/experiment-02/: m1024_n1024_q2048_P16_seed0.txt  m1024_n1024_q2048_P16_seed1.txt  m1024_n1024_q2048_P16_seed2.txt  m1024_n1024_q2048_P16_seed3.txt  m1024_n1024_q2048_P16_seed4.txt  m1024_n2048_q2048_P16_seed0.txt  m1024_n2048_q2048_P16_seed1.txt  m1024_n2048_q2048_P16_seed2.txt  m1024_n2048_q2048_P16_seed3.txt  m1024_n2048_q2048_P16_seed4.txt  m1024_n2048_q4096_P16_seed0.txt  m1024_n2048_q4096_P16_seed1.txt  m1024_n2048_q4096_P16_seed2.txt  m1024_n2048_q4096_P16_seed3.txt  m1024_n2048_q4096_P16_seed4.txt  m2048_n2048_q4096_P16_seed0.txt  m2048_n2048_q4096_P16_seed1.txt  m2048_n2048_q4096_P16_seed2.txt  m2048_n2048_q4096_P16_seed3.txt  m2048_n2048_q4096_P16_seed4.txt  m2048_n4096_q4096_P16_seed0.txt  m2048_n4096_q4096_P16_seed1.txt  m2048_n4096_q4096_P16_seed2.txt  m2048_n4096_q4096_P16_seed3.txt  m2048_n4096_q4096_P16_seed4.txt  m2048_n4096_q8192_P16_seed0.txt  m2048_n4096_q8192_P16_seed1.txt  m2048_n4096_q8192_P16_seed2.txt  m2048_n4096_q8192_P16_seed3.txt  m2048_n4096_q8192_P16_seed4.txt  m4096_n4096_q8192_P16_seed0.txt  m4096_n4096_q8192_P16_seed1.txt  m4096_n4096_q8192_P16_seed2.txt  m4096_n4096_q8192_P16_seed3.txt  m4096_n4096_q8192_P16_seed4.txt  m4096_n8192_q8192_P16_seed0.txt  m4096_n8192_q8192_P16_seed1.txt  m4096_n8192_q8192_P16_seed2.txt  m4096_n8192_q8192_P16_seed3.txt  m4096_n8192_q8192_P16_seed4.txt  (+15 more)
results/experiment-03/: dims4096_P16_seed0.txt  (+14 more)
(+47 files in other folders)
